contrast fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -153,7 +153,7 @@ fieldset {
 
 legend {
   padding: 0.5rem;
-  color: var(--secondary-color);
+  color: var(--primary-color);
   font-size: 1.3em;
 }
 
